//protoc -I=./proto --python_out=./proto ./proto/packet.proto
syntax = "proto2";

message Packet {
  enum Operation {
    START = 0;
    TERMINATE = 1;
    DATA_TRANSFER = 2;
    ACK = 3;
  }

  enum Direction {
    PROXY_CLIENT = 0;
    PROXY_SERVER = 1;
  }

  optional uint32 session_id = 1;  //the client session          
  optional uint32 packet_num = 2;        
  optional Operation operation = 3;        
  optional Direction direction = 4; 
  optional string ip = 5;       // destination ip
  optional uint32 port = 6;     // destination port
  optional bytes payload = 7; 
}